@@ -1,3 +1,7 @@
+2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Check tape_access.
+	* server-src/taper.c: Improve message.
+
 2007-01-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/getconf.c: Fix segfault in parameter parsing.
 
